--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -1,3 +1,8 @@
+{% assign on_sale = false %}
+{% if product.compare_at_price_max > product.price %}
+  {% assign on_sale = true %}
+{% endif %}
+
 <rv-shopify-product handle="{{product.handle}}">
   <div class="container-fluid">
 
@@ -97,7 +102,10 @@
         </div>
         <div>
           <strong>{{ product.title }}</strong><br />
-          <div rv-text="variant.price | money '{{ shop.money_format }}'">{{ product.price | money }}</div>
+          {% if on_sale %}
+            <s class="compare-at-price mr-2" rv-show="variant.compare_at_price | gt variant.price" rv-text="variant.compare_at_price | money '{{ shop.money_format }}'">{{ product.compare_at_price_max | money }}</s>
+          {% endif %}
+          <span rv-class-text-danger="variant.compare_at_price | gt variant.price" rv-text="variant.price | money '{{ shop.money_format }}'">{{ product.price | money }}</span>
         </div>
       </div>
 
