--- a/src/scss/templates/_navigation.scss
+++ b/src/scss/templates/_navigation.scss
@@ -20,6 +20,7 @@
   letter-spacing: .1rem;
   font-weight: bold;
   font-size: 0.9rem;
+  z-index: $zindex-fixed + 1;
   a {
     padding-top: 0.8rem;
     display: inline-block;
