--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -210,7 +210,7 @@
       </i18n-switcher>
     </div>
 
-    <div class="nav-item nav-link more-menu-toggler cursor-pointer d-block" rv-aria-expanded="moreMenuOpen" rv-on-click="globalToggle | args 'moreMenuOpen'">
+    <div class="nav-item nav-link mini-toggler cursor-pointer d-block" rv-aria-expanded="moreMenuOpen" rv-on-click="globalToggle | args 'moreMenuOpen'">
       <span>+</span>
     </div>
 
