--- a/theme/snippets/jumplink-form-new-comment.liquid
+++ b/theme/snippets/jumplink-form-new-comment.liquid
@@ -1,7 +1,7 @@
 <rv-shopify-comments-form>
   {% form 'new_comment', article %}
     <h3
-      class="text-size-base"
+      class="font-size-base"
       rv-i18n-text="'blogs.comments.title_form'"
       >
       {{ 'blogs.comments.title_form' | t }}
