--- a/src/ts/components/shopify-product/shopify-product.component.scss
+++ b/src/ts/components/shopify-product/shopify-product.component.scss
@@ -10,4 +10,11 @@ rv-shopify-product {
   .input-quantity {
     width: 28px !important;
   }
+
+  .option-variant-color, .option-metafield-color {
+    z-index: 1;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
 }
