--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -18,7 +18,7 @@
       MAINBAR RIGHT
     {% endcomment %}
     <div class="ml-auto col-auto d-flex align-items-center">
-      <shopify-linklist class="col-auto pointer-events-all small" rv-linklist="system.linklists.footer | json" vertical="false">
+      <shopify-linklist class="col-auto pointer-events-all small" rv-co-linklist="system.linklists.footer" vertical="false">
         <nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
           <div class="nav-item" rv-each-link="linklist.links" >
             <a
