--- a/theme/snippets/product-collection-grid-item-col-ratio-3by4.liquid
+++ b/theme/snippets/product-collection-grid-item-col-ratio-3by4.liquid
@@ -8,6 +8,23 @@
   {% assign colClass = 'col-12 col-md' %}
 {% endif %}
 
+{%- comment -%} Generate color variants array {%- endcomment -%}
+{%- for i in (1..4) -%}
+  {%- assign colorIndex = "product-link-" | append: forloop.index | append: "-color" -%}
+  {%- assign HandleIndex = "product-link-" | append: forloop.index | append: "-handle" -%}
+  {%- assign color = product.metafields["global"][colorIndex] | strip -%}
+  {%- assign handle = product.metafields["global"][HandleIndex] | strip -%}
+  {%- if color != blank and handle != blank -%}
+    {%- assign colorMap = handle | append: ':' | append: color -%}
+    {%- if colors == blank -%}
+      {%- assign colors = colorMap -%}
+    {%- else -%}
+      {%- assign colors = colors | append: ',' | append: colorMap -%}
+    {%- endif -%}
+  {%- endif -%}
+{%- endfor -%}
+{%- assign colorArray = colors | split: ',' | sort -%}
+
 <rv-shopify-product-item handle="{{ product.handle }}" class="{{ colClass }} {{ orderClass }} px-0 embed-responsive embed-responsive-3by4">
   <a rv-route="'{{ product.url | within: collection }}'" href="{{ product.url | within: collection }}">
     <img
@@ -73,23 +90,20 @@
     <div class="row m-0 colorMenu" rv-class-show="showDetailMenu">
       
       <div class="col-12">
-        <div class="row m-0">
-          <div rv-each-color="colorOption.values" class="col-auto pl-0 pr-2 pb-4 cursor-pointer pointer-events-all" rv-on-click="chooseOption | args color colorOption.position colorOption.name">
-            <div class="styleicon-circle option-color option-variant-color" rv-add-class="color | replaceFirst '#' '' | prepend 'option-color-'" rv-style-background-color="color" style="width: 16px; height: 16px;"></div>
+        <div rv-flex-sort-childs class="row m-0">
+          <div data-sort-by="{{ product.handle }}" rv-each-color="colorOption.values" class="col-auto pl-0 pr-2 pb-4 cursor-pointer pointer-events-all option-variant-color" rv-on-click="chooseOption | args color colorOption.position colorOption.name">
+            <div class="styleicon-circle option-color" rv-add-class="color | replaceFirst '#' '' | prepend 'option-color-'" rv-style-background-color="color" style="width: 16px; height: 16px;"></div>
           </div>
-          {% for i in (1..4) %}
-            {% assign colorIndex = "product-link-" | append: forloop.index | append: "-color" %}
-            {% assign HandleIndex = "product-link-" | append: forloop.index | append: "-handle" %}
-            {% assign variantColor = product.metafields["global"][colorIndex] %}
-            {% assign handle = product.metafields["global"][HandleIndex] %}
-            {% if variantColor != blank and handle != blank %}
-              <div
-                class="col-auto pl-0 pr-2 pb-4 cursor-pointer"
-                rv-route="'{{ all_products[handle].url }}'"
-              >
-                <div class="styleicon-circle option-color option-metafield-color option-color-{{ variantColor }}" rv-style-background-color="'{{ variantColor }}'" style="width: 16px; height: 16px;"></div>
-              </div>
-            {% endif %}
+          {% for colorMap in colorArray %}
+            {%- assign handle = colorMap | split: ':' | first -%}
+            {%- assign color = colorMap | split: ':' | last -%}
+            <a
+              data-sort-by="{{ handle }}"
+              class="col-auto pl-0 pr-2 pb-4 cursor-pointer pointer-events-all option-metafield-color"
+              rv-route="'{{ all_products[handle].url }}'"
+            >
+              <div class="styleicon-circle option-color option-color-{{ color }}" rv-style-background-color="'{{ color }}'" style="width: 16px; height: 16px;"></div>
+            </a>
           {% endfor %}
         </div>
       </div>
