--- a/theme/templates/collection.lookbook.liquid
+++ b/theme/templates/collection.lookbook.liquid
@@ -1,4 +1,4 @@
-<div class="container-fluid" rv-view='{"listenAllLinks": false, "containerSelector": "#products-pagination", "scrollToTop": false, "action": "append", "datasetToModel": false}' id="products-pagination">
+<div class="container-fluid" {% comment %} FIXME rv-view='{"listenAllLinks": false, "containerSelector": "#products-pagination", "scrollToTop": false, "action": "append", "datasetToModel": false}'{% endcomment %} id="products-pagination">
   {% paginate collection.products by 40 %}
     <div class="row">
       {% for product in collection.products %}
