Changed eye icon link to collection/all

--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -122,7 +122,7 @@
 {% comment %} footer smartphone {% endcomment %}
 <div class="container-fluid d-block d-lg-none bg-white fixed-bottom smartphone-menu-buttom">
   <div class="row">
-    <a class="col d-flex justify-content-center py-2" rv-route-class-active="'/pages/fassbender'" rv-route="'/pages/fassbender'">
+    <a class="col d-flex justify-content-center py-2" rv-route-class-active="'/collections/all'" rv-route="'/collections/all'">
       <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="32" width="32"></rv-icon>
     </a>
 
