--- a/theme/snippets/jumplink-utils-js-variables.liquid
+++ b/theme/snippets/jumplink-utils-js-variables.liquid
@@ -150,7 +150,7 @@
    * assets
    * TODO generate a list of assets
    */
-  window.model.system.assetsPath = {{ 'favicon.ico' | asset_url | replace: 'favicon.ico', '[fileName]' | json | }};
+  window.model.system.assetsPath = {{ 'favicon.ico' | asset_url | replace: 'favicon.ico', '[fileName]' | json }};
   window.model.system.assetsPath = window.model.system.assetsPath.substring(0, window.model.system.assetsPath.indexOf('[fileName]'))
   window.model.system.assets = window.model.system.assets || {};
   window.model.system.assets['no-image.png'] = {{ 'no-image.png' | asset_url | json }};
