--- a/theme/snippets/jumplink-open-graph-tags.liquid
+++ b/theme/snippets/jumplink-open-graph-tags.liquid
@@ -1,6 +1,6 @@
 {% if template contains 'product' %}
   <meta property="og:type" content="product" />
-  <meta property="og:title" content="{{ product.title | stripHtml | escape }}" />
+  <meta property="og:title" content="{{ product.title | strip-html | escape }}" />
   {% for image in product.images %}
   <meta property="og:image" content="http:{{ image | img_url: 'grande' }}" />
   <meta property="og:image:secure_url" content="https:{{ image | img_url: 'grande' }}" />
@@ -9,7 +9,7 @@
   <meta property="og:price:currency" content="{{ shop.currency }}" />
 {% elsif template contains 'article' %}
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="{{ article.title | stripHtml | escape }}" />  
+  <meta property="og:title" content="{{ article.title | strip-html | escape }}" />  
   {% assign img_tag = '<' | append: 'img' %}
   {% if article.content contains img_tag %}
     {% assign src = article.content | split: 'src="' %}
