--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -143,7 +143,7 @@
           <div class="form-inline">
             <label class="m-0" for="quanity" rv-i18n-text="'products.quantity'">{{ 'products.quantity' | t }}</label>
             <span class="px-3 btn-quantity" rv-on-click="decrease">-</span>
-            <input type="number" min="0" step="1" class="form-control input-quantity bg-transparent border-0 px-0 text-center" id="quanity" rv-value="quantity | stripHtml | number 1">
+            <input type="number" min="0" step="1" class="form-control input-quantity bg-transparent border-0 px-0 text-center" id="quanity" rv-value="quantity | strip-html | to-number 1">
             <span class="px-3 btn-quantity" rv-on-click="increase">+</span>
           </div>
         </div>
@@ -399,7 +399,7 @@
       "https:{{ product.featured_image.src | img_url: image_size }}"
     ],
   {%- endif -%}
-  "description": "{{ product.description | stripHtml | escape }}",
+  "description": "{{ product.description | strip-html | escape }}",
   {%- if current_variant.sku != blank -%}
     "sku": "{{ current_variant.sku }}",
   {%- endif -%}
