--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -112,6 +112,15 @@
     </div>
   </div>
 
+  {% comment %}
+    TODO fix filter in fsbdr-mainbar 
+    <router-view listen-all-links="false" dataset-to-model="true" parse-title="true" prefetch-links="true" id="main">
+      <div {% render 'riba-view-namespace', parseCollection: true %}>
+        {{ content_for_layout }}
+      </div>
+    </router-view>
+  {% endcomment %}
+
   <div id="layout-bottom" class="pb-5 pb-lg-0">
     {% include 'jumplink-footer' %}
   </div>
