Fix color switcher

--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -113,7 +113,7 @@
   </div>
 
   {% comment %}
-    TODO fix filter in fsbdr-mainbar 
+    TODO test filter in fsbdr-mainbar
     <router-view listen-all-links="false" dataset-to-model="true" parse-title="true" prefetch-links="true" id="main">
       <div {% render 'riba-view-namespace', parseCollection: true %}>
         {{ content_for_layout }}
