--- a/theme/sections/outdated-browser.liquid
+++ b/theme/sections/outdated-browser.liquid
@@ -155,7 +155,7 @@
      * Test if the current borwser is IE
      */
     function isIE() {
-        return (navigator.appName == 'Microsoft Internet Explorer' ||  !!(navigator.userAgent.match(/Trident/) || navigator.userAgent.match(/rv:11/)) || (typeof $.browser !== "undefined" && $.browser.msie == 1));
+        return (navigator.appName == 'Microsoft Internet Explorer' ||  !!(navigator.userAgent.match(/Trident/) || navigator.userAgent.match(/rv:11/)) || $ && (typeof $.browser !== "undefined" && $.browser.msie == 1));
     }
     
     function addBrowserClassToHtml() {
