--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import './vendors/bootstrap/functions';
 @import './vendors/bootstrap/variables';
 @import './vendors/bootstrap/mixins';
@@ -262,7 +263,7 @@ $h4-font-size:                $font-size-base * 1.5;
 $h5-font-size:                $font-size-base * 1.25;
 $h6-font-size:                $font-size-base;
 
-$headings-margin-bottom:      ($spacer / 2);
+$headings-margin-bottom:      math.div($spacer, 2);
 $headings-font-family:        inherit;
 $headings-font-weight:        700;
 $headings-line-height:        1.2;
@@ -624,11 +625,11 @@ $nav-pills-link-active-color:       $component-active-color;
 $nav-pills-link-active-bg:          $component-active-bg;
 
 $nav-divider-color:                 $gray-200;
-$nav-divider-margin-y:              ($spacer / 2);
+$nav-divider-margin-y:              math.div($spacer, 2);
 
 // Navbar
 
-$navbar-padding-y:                  ($spacer / 2);
+$navbar-padding-y:                  math.div($spacer, 2);
 $navbar-padding-x:                  $spacer;
 
 $navbar-nav-link-padding-x:         .5rem;
@@ -637,7 +638,7 @@ $navbar-brand-font-size:            $font-size-lg;
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
 $nav-link-height:                   ($font-size-base * $line-height-base + $nav-link-padding-y * 2);
 $navbar-brand-height:               $navbar-brand-font-size * $line-height-base;
-$navbar-brand-padding-y:            ($nav-link-height - $navbar-brand-height) / 2;
+$navbar-brand-padding-y:            math.div($nav-link-height - $navbar-brand-height, 2);
 
 $navbar-toggler-padding-y:          .25rem;
 $navbar-toggler-padding-x:          .75rem;
@@ -708,7 +709,7 @@ $card-bg:                           $white;
 
 $card-img-overlay-padding:          1.25rem;
 
-$card-group-margin:                 ($grid-gutter-width / 2);
+$card-group-margin:                 (math.div($grid-gutter-width, 2));
 $card-deck-margin:                  $card-group-margin;
 
 $card-columns-count:                3;
