--- a/src/scss/extensions/_animations.scss
+++ b/src/scss/extensions/_animations.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // https://github.com/daneden/animate.css/blob/master/source/_base.css
 @mixin animated($duration: 1s, $delay: 0, $count: infinite) {
   animation-duration: $duration;
@@ -25,11 +27,11 @@
 
     70% {
       animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      transform: translate3d(0, $intensity / 2, 0);
+      transform: translate3d(0, math.div($intensity, 2), 0);
     }
 
     90% {
-      transform: translate3d(0, $intensity/ 4, 0);
+      transform: translate3d(0, math.div($intensity, 4), 0);
     }
   }
 }
