--- a/theme/snippets/jumplink-article-list-item-view-magazine.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-magazine.liquid
@@ -74,7 +74,7 @@
           {% endif %}
           {% if videoType == 'video/mp4' %}
             <rv-video>
-              <video class="embed-responsive-item lazy" preload="auto" controls {% if videoPoster %}poster="{{ videoPoster }}"{% endif %} playsinline webkit-playsinline>
+              <video class="embed-responsive-item lazy video-mp4" preload="auto" controls {% if videoPoster %}poster="{{ videoPoster }}"{% endif %} playsinline webkit-playsinline>
                 <source src="{{ video }}" type="video/mp4">
                 <span rv-i18n-text="'system.video_tag_not_supported'">
                   {{'system.video_tag_not_supported'|t}}
@@ -89,7 +89,7 @@
           {% if videoType == 'vimeo' %}
             <iframe
               loading="lazy"
-              class="embed-responsive-item lazy"
+              class="embed-responsive-item lazy video-iframe-vimeo"
               type="text/html"
               src="https://player.vimeo.com/video/{{ video }}?color=D9998F&title=0&byline=0&portrait=0&autoplay=0&loop=0&autopause=1&background=0&muted=0"
               frameborder="0"
@@ -106,7 +106,7 @@
           {% if videoType == 'youtube' %}
             <iframe
               loading="lazy"
-              class="embed-responsive-item lazy"
+              class="embed-responsive-item lazy video-iframe-youtube"
               type="text/html"
               src="https://www.youtube.com/embed/{{ video }}?autoplay=0&mute=0&color=white&controls=2&disablekb=0&enablejsapi=0&fs=1&iv_load_policy=3&loop=0&modestbranding=1&origin={{shop.url}}&playsinline=0&rel=0&showinfo=0"
               frameborder="0"
